--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
+    <head>
+        <meta charset="utf-8">
+    </head>
     <body>
+        <style>
+            table {
+                background-color: rgb(85%, 85%, 85%);
+                font-family: courier
+            }
+        </style>
+        <table id="snakegrid"></table>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="snake.js" type="text/javascript"></script>
         <script type="text/javascript">goog.require("snake.core");</script>
