--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <body>
         <style>
             table {
+                border: 0;
+                border-spacing: 0;
+                padding: 0;
                 background-color: rgb(85%, 85%, 85%);
-                font-family: courier
+                font-family: courier;
+            }
+            .block {
+                background-color: black;
+            }
+            .apple {
+                background-color: green;
+            }
+            .snake {
+                background-color: cyan;
             }
         </style>
         <table id="snakegrid"></table>
