Revert "release configuration"
This reverts commit dc1b09443bd796954a6fd153fa6c64fd5581f80f.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             }
         </style>
         <table id="snakegrid"></table>
+        <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="snake.js" type="text/javascript"></script>
+        <script type="text/javascript">goog.require("snake.core");</script>
     </body>
 </html>
